# neigh

./: README.md  main.py  pyproject.toml  setup.py
neigh/bet_tools/: racing.py
neigh/core/: connection.py
neigh/models/: racing.py
playground/: scrape_test.ipynb
scrape/: scrape.ipynb  scrape.py
