[project]
name = "neigh"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.12",
    "ipykernel>=6.29.5",
    "pandas>=2.2.3",
    "parsel>=1.10.0",
    "pydantic>=2.10.6",
    "pytest>=8.3.4",
    "requests>=2.32.3",
]
